--- a/pwa/index.html
+++ b/pwa/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +15,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="icons/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="icons/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="icons/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
@@ -22,22 +23,12 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <script>
-        if ('serviceWorker' in navigator) { 
-         window.addEventListener('load', function() {   
-           navigator.serviceWorker.register('./sw.js').then(
-             function(registration) { 
-               // Registration was successful
-               console.log('ServiceWorker registration successful with scope: ', registration.scope); }, 
-             function(err) { 
-               // registration failed :( 
-               console.log('ServiceWorker registration failed: ', err); 
-             }); 
-         });
-        }
-    </script>
 </head>
+
 <body>
     <h1>田阳test</h1>
+
+    <script src="js/index.js"></script>
 </body>
+
 </html>
