--- a/pwa/index.html
+++ b/pwa/index.html
@@ -28,7 +28,7 @@
 <body>
     <h1>田阳test</h1>
 
-    <script src="js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
